<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">WifiHertz</string>
    <string name="hello_world">Zaloguj się do serwera WifiHertz</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">WifiHertz</string>
    <string name="login">Login</string>
    <string name="haslo">Hasło</string>
    <string name="zaloguj">Zaloguj</string>
    <string name="logoprogramu">logoProgramu</string>
    <string name="title_activity_wybor_mapy">WyborMapy</string>
    <string name="wyborMapyInfo">Tutaj pojawi się lista dostępnych map. Narazie zaimprowizowałem je buttonami.</string>
    <string name="title_activity_ekran_pomiaru">EkranPomiaru</string>
    <string name="mapa_1">Mapa 1</string>
    <string name="mapa_2">Mapa 2</string>
    <string name="mapa_3">Mapa 3</string>
    <string name="zalogowano_jako_">"Zalogowano jako: "</string>
    <string name="userID">none</string>
    <string name="urlLogowania">http://wifihertz.kalinowski.net.pl/login</string>
    <string name="plan">plan</string>
    <string name="title_activity_ekran_synchronizacji">EkranSynchronizacji</string>
    <string name="action_settings">Settings</string>
    <string name="synchronizacja">Synchronizacja trwa...</string>

</resources>